--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    
     "start": "node app.js"
   },
   "keywords": [],
@@ -21,6 +20,7 @@
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "nodemailer": "^6.7.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "redis": "^4.0.1"
   }
 }
